--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,20 @@
 root = true
 
-[*.{php, html, css}]
+[*]
 charset = utf-8
 end_of_line = lf
 insert_final_newline = true
+indent_style = space
+indent_size = 4
 trim_trailing_whitespace = true
-indent_style = tab
+
+[*.css]
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = true
+
+[*.md]
+trim_trailing_whitespace = false
